--- a/.authors.yml
+++ b/.authors.yml
@@ -650,6 +650,7 @@
   - Jaime Rodríguez-Guerra
   - Jaime RGP
   - Jaime RG
+  - jaimergp
   alternate_emails:
   - jaimergp@users.noreply.github.com
   - jaime.rogue@gmail.com
