--- a/.authors.yml
+++ b/.authors.yml
@@ -2247,3 +2247,9 @@
   github: dariocurr
   num_commits: 1
   first_commit: 2022-12-07 09:10:25
+- name: Gil Forsyth
+  email: gforsyth@users.noreply.github.com
+- name: Adrian Freund
+  email: adrian.freund@quantco.com
+- name: FelisNivalis
+  email: 88343630+FelisNivalis@users.noreply.github.com
